mule-fundamentals/v/3.7/anypoint-exchange.adoc
= Anypoint Exchange
:keywords: exchange, content types

link:https://www.mulesoft.com/exchange[Anypoint Exchange] is a discovery interface (UI and API) where you can find Anypoint Connectors, Templates, Examples, and API descriptions in link:http://raml.org[RAML] and WSDL that help make the adoption of the Anypoint Platform a lot easier and faster for you.

Anypoint Exchange provides public official MuleSoft content that you can access using Anypoint Studio or from the MuleSoft website as soon as it is published. You can also publish private content to it through your Anypoint Platform organization that is shared only among the members of your organization.

[NOTE]
====
An On premise version of the Exchange is available with the link:/anypoint-platform-on-premises/v/1.1.0/[Anypoint Platform on Premises]. Although this is the same product, there are some differences and limitations:

* Anypoint Exchange on premises does not allow users to access the MuleSoft tenant available on the cloud, and thus is shipped with no default content.
* The Exchange On-Premises is currently not accessible via Anypoint Studio.
* The Anypoint Exchange May 2016 update does not apply to the on-premises version. For more information, see the link:/release-notes/anypoint-exchange-release-notes[Anypoint Exchange Release Notes].
====

== Types of Content

Both the public and private content in Exchange can consist of the following kinds of elements:

*Connectors* facilitate easy integration of your Mule applications with third-party APIs and standard integration protocols. Use them within your application's flows to send and receive data via a protocol or specific API. Anypoint Studio comes bundled with a large set of connectors, but in the Exchange are many more.

*APIs* are RAML files that describe an API's structure, they can be referenced by an link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector] to expose metadata to Studio.

*Examples* are Mule projects that explain what the elements are in Studio and how they work together to achieve certain objectives.

*Templates* are projects that cover typical enterprise integration use cases. Find one that performs what you need, provide it user credentials, and it should be good to deploy! You can also customize or extend templates as needed. All the templates in the Exchange are built based on one of these data link:https://www.mulesoft.com/resources/esb/top-five-data-integration-patterns[integration patterns]:

[cols=",,,,",]
|===
|*http://blogs.mulesoft.org/data-integration-patterns-migration/[Migration]* |*http://blogs.mulesoft.org/data-integration-patterns-broadcast/[Broadcast]* |*http://blogs.mulesoft.org/data-integration-patterns-bi-directional-sync/[Bi-Directional Sync]* |*http://blogs.mulesoft.org/data-integration-patterns-aggregation/[Aggregation]* |*http://blogs.mulesoft.org/data-integration-patterns-correlation/[Correlation]*
|image:sync.png[sync] |image:salesforce-integration-templates-broadcast.png[salesforce-integration-templates-broadcast] |image:bisync.png[bisync] |image:salesforce-integration-templates-aggregate.png[salesforce-integration-templates-aggregate] |image:salesforce-integration-templates-synchronize.png[salesforce-integration-templates-synchronize]

|===

The examples and templates categories depend on the purpose for which each project is built: templates are almost ready to use just-add-water solutions, while examples are intended to increase your understanding of Studio elements and to build your own solution. Of course, if it suits your needs you could also end up using an example as a starting point for an actual deployable project or a template as a tool for understanding concepts.

== Accessing the Exchange's Public Content

There are several ways to access the Exchange.

* From the icon in the Anypoint Studio toolbar: +
image:exchange+icon.png[exchange+icon]

* By searching for a connector that you don't have in your palette, and clicking *Search the Exchange for _<connector>_* : +
image:exchange+search.png[exchange+search]

* Through Anypoint Studio's drop-down menu:  *File* > *New* > *Project From Template*.
* Through the global element of the link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector], and the link to *Search RAML Exchange*.
* Through the link:http://mulesoft.com/exchange[Exchange website].
* Through link:https://anypoint.mulesoft.com/#/signin[Anypoint Platform].

== Navigating Anypoint Exchange

You can search link:https://www.mulesoft.com/exchange#!/[Anypoint Exchange] using tags and keywords for a name, summary, description, and tags of the items. Each element is tagged with labels that refer to a version, the Mule Runtime versions it supports, etc. These are also organized by pattern so you can scan through only those that perform what you're interested in.

image:Exchange.png[Exchange]
//This image is an old one, you can check in https://stg.anypoint.mulesoft.com to take a new one.

* Click *View Details* to read a brief overview of the project and access more options.
* Click *Download* to directly download the project or connector to your Studio workspace and open it in Studio.

For APIs you can also view the API's link:/anypoint-platform-for-apis/engaging-users-of-your-api[API Portal.]

Every piece of content, regardless of its type, has a rating associated to it. This rating is displayed next to the element once it has received two or more ratings.

[NOTE]
You can only submit a rating if you have entered the Exchange through Anypoint Studio. If you're rating a Connector, you also need to have it installed in Anypoint Studio in order to rate it.

== Installing a Connector from Anypoint Exchange

[NOTE]
Some connectors may be viewable via Exchange but not yet installable through it, they soon will be. If the connector you need is not yet available for installation in Exchange, you can install it using the link:/mule-user-guide/v/3.7/installing-connectors[install new software] menu.

The basic steps for installing Connectors from Exchange into Studio:

. Find the Connector that you need and click *Install*. Make sure the connector is compatible with the Mule runtime you want to build projects for.
+
image:connector.png[connector]
+
. Accept the terms and conditions and follow through the wizard, then allow Studio to restart.
. The downloaded connector is then available in the canvas:
+
image:on+palette.png[on+palette]

== Opening an Example From Exchange

Below are the basic steps for implementing any of the Examples in Exchange.

. Find the example that best suits your needs and click *View details:*
+
image:exchange+1.png[exchange+1]
+
. In the XML code are graphic representations of how this implementation looks in Studio, explanatory diagrams, and more.
. Click *Open in Studio* to import it into Studio as a new project
. The project is then available in your package explorer. Take a look at the files it contains. The main XML file under `src/main/app` should automatically be opened in your canvas.
+
image:example+on+package+explorer.png[example+on+package+explorer]
+
. If there are any connectors in the project that require that you provide specific user credentials, enter the connector's properties editor, and fill in these fields.
. The example is now complete! You can deploy it to see what's its outcome, run it on link:/mule-user-guide/v/3.7/studio-visual-debugger[debug mode] to examine what occurs with the Mule Message on each step, or modify it as needed.

== Implementing a Template From Exchange

Below are the basic steps for implementing any of the Templates in Exchange:

. Find the template that best suits your needs and click *Open in Studio*
+
image:exchange+2.png[exchange+2]
+
. You can now see this project available in your package explorer, take a look at the files it contains:
+
image:package+explorer.png[package+explorer]
+
[NOTE]
When you first open the project it may be marked as having errors, these should simply refer to the fact that the connectors being used in it need to be configured with your user credentials to work.
. Open the `mule-project.xml` file, located directly in the root level of the project folder, if you wish to deploy your app to any environment other than `dev`, change the value of the `mule.env` parameter.
+
image:mule.env.png[mule.env]
+
. All templates in Exchange come built in so that to make them work, all you need to do is include your credentials in the configuration files. All of the connectors and global elements in the project's flows reference the fields in these configuration files, so (unless you plan on expanding or customizing how the template works) you never really need to modify or even look at anything other than these files.
+
image:environments.png[environments] 
+
Under the `src/main/resources` folder, find the file that corresponds to the environment that you selected for deploying in the previous step, then open it.
. Provide a value for each of the fields that the configuration file expects, this may include user credentials, port numbers, callback URLs, etc.
. To test your app, save the project and deploy it to Anypoint Studio's embedded run time by clicking the dropdown menu next to the `play` button and selecting the project out of the list.
+
image:play.png[play]

. Now your app is now ready to link:/mule-fundamentals/v/3.7/deploying-mule-applications[Deploy].

== Referencing a RAML File

When using the link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector], you can reference a link:http://raml.org[RAML] file, which makes configuring the connector and the rest of your flow extremely easy. By referencing the RAML file, the connector offers you smart autocomplete options based on how the RAML file describes the available resources, methods and parameters. The metadata that the connector exposes can help you map it to other elements and reference its outputs elsewhere in the flow, specially with help from the link:/mule-user-guide/v/3.7/data-weave[Transform Message Component].

. In an *HTTP Request Connector*'s properties editor, click the green plus sign next to Connector Configuration to create a Global Configuration Element for it.
. In the *General* tab, provide a *RAML Location*. You can reference a file stored in your local system, or you can use the Exchange to browse a list of public APIs that have published their RAML definitions by clicking on *Search RAML in Exchange*:
+
image:raml+library.png[raml+library]

. Navigate the Exchange and look for the API you wish to connect to. You can either click the *View Details* button to read more about that API and RAML definition, or you can click *Add* to make your HTTP Connector reference it.


== Referencing a WSDL File

When using the link:/mule-user-guide/v/3.7/web-service-consumer[Web Service Consumer], you can reference a WSDL file, which makes configuring the connector and the rest of your flow extremely easy. By referencing the WSDL file, the connector offers you smart autocomplete options based on how the WSDL file describes the available resources, methods and parameters. The metadata that the connector exposes can help you map it to other elements and reference its outputs elsewhere in the flow, specially with help from the link:/mule-user-guide/v/3.7/data-weave[Transform Message Component].

. In the *Web Service Consumer*'s properties editor, click the green plus sign next to Connector Configuration to create a Global Configuration Element for it.
. In the *General* tab of the Web Service Consumer's Global Element Properties menu, provide a *WSDL Location*. You can reference a file stored in your local system, or you can use Anypoint Exchange to browse a list of public APIs that have published their WSDL definitions by clicking on *Search WSDL in Exchange*:
+
image:wsdl-exchange.png[Search WSDL in Exchange link]
+
. Navigate the Exchange and look for the API you wish to connect to. You can either click the *View Details* button to read more about that API and WSDL definition, or you can click *Add* to make your Web Service Consumer reference it.

== Submitting Your Private Content to Exchange

If you have an Anypoint Platform account, your organization can share all of the supported items privately in the Exchange that is accessible via the Anypoint Platform. This is especially useful when you want to share resources among departments in an organization. The Exchange is an easily searchable repository where you can catalog and describe the elements you want to share, together with version compatibility information and links to downloadable files and reference material.

[NOTE]
The Exchange does not host any of your private files, it only links to them. This means that if you want to make a Mule Project or a Connector easily downloadable through your Exchange, you must host these elsewhere through an HTTP service.

=== Permissions

All users in your organization can view items published in the Exchange. However, to create, publish, update, or delete elements from your organization's Exchange, a user must first be given the appropriate permissions within the organization.

==== Adding Exchange Permissions

By default, no one has permission to submit Exchange content. If you are an organization administrator, you can add users to any of the three roles.

. Log into link:https://anypoint.mulesoft.com/#/signin[Anypoint Platform].
. Click *Access Management* from the left side navigation bar or the starting Anypoint Platform menu:
+
image:access-management.png[access-management]
+
TIP: In Anypoint Platform, you can open and close the left navigation bar view by pressing the Escape key on your keyboard.
+
. Click  *Roles*:
+
image:access-mgmt-roles.png[access-mgmt-roles]
+
This displays a table with a set of roles for various different tools, only three of which are relevant to the Exchange:

* Exchange Viewers - Views Exchange artifacts.
* Exchange Contributors - Contributes Exchange artifacts.
* Exchange Administrators - Approves Exchange artifacts that the contributor creates so that the artifact can be published in Exchange.

image:exchange-roles.png[exchange-roles]

To add users to a role, click a role, click the username field to select a name, and click the blue plus button to save the entry. The user is assigned Exchange permissions and can submit items.

image:exchange-add-name-to-role.png[exchange-add-name-to-role]

==== Content State Transition

At any given point in time, a content can be in any one of the following 3 states:

* *Work in Progress*: when the contributor starts working on it and saves it without submitting it for Publishing.
* *Waiting for Approval*: when the contributor submits it for publishing but the approver hasn’t published it yet.
* *Published*: when the a user with the Administrator role approves the content. The content moves back to Waiting For Approval if the administrator denies it.

==== Scopes of Exchange Permissions

An *Exchange Contributor* submits content to the Exchange, however this content remains 'work in progress' and is only visible to the contributor. The contributor can also *Request for publish*. Only then, can the administrator see this content, and *publish* or *deny* the request.

An *Exchange Administrator* can publish her own and other user's content to the Exchange. She is able to see, edit, or delete any of the content from others that are *published* or *waiting for approval*.

An *Exchange Viewer* can only view content.

== Submitting to a Private Exchange

To submit an entry to the Exchange, click the *Submit Item* button on the top left, then pick the type of item you want to submit out of the drop down list, each kind of item  offers a submission form with different fields.

image:exchange-add-item.png[exchange-add-item]

The choices for *Add Item* are:

image:exchange-add-item-choices.png[exchange-add-item-choices]

Whatever type of Exchange entry you're creating, you can include a description and even embed a YouTube video to provide more information about your entry. You can also add different tags to your entry to make it easier to find in the Exchange.

You can also include an Author name and a corresponding image to optionally display on your content. This can be useful when your organization has many contributors and partners.  This section is hidden if not filled out.

Keep in mind that after submitting an item, it is added to the Exchange with an *work in progress* status, which makes it only visible to yourself. If you have the Exchange Administrator role, you can easily publish it by opening the Exchange entry through the *View Details* button and clicking the *Publish* button. If you have the Exchange Contributor role, you can 'Request for publish' and then a user with the Exchange Administrator role can see it and approve.

image:exchange-publish.png[exchange-publish]

The *Publish* button drop-down menu lists the exchanges that you can publish the item to:

image:exchange-publish-to-private-exchanges.png[exchange-publish-to-private-exchanges]

== Submitting Templates and Examples to a Private Exchange

Templates and examples are both submitted to the Exchange in the same way. You can add multiple template versions to work with different Mule runtime versions, just click the *Add Versions* button and then *Done* after filling in the version information. For each version you add, you have three options for linking to the Mule Project itself:

* *Download*: Link to an HTTP address where you host your Mule deployable zip file. Other people on your organization see a *Download* button on the Exchange entry, which allows them to import the project to Studio with one click.
* *Link*: Link to an external address, where they might be able to download the file and import it into studio manually.
* *No link*: Don't provide a link, your Exchange entry only contains a description.

For your project to be automatically importable into Studio via the Exchange, it must be packaged into a *.zip* file that must be structured in a particular way.

If you use the *January 2015 - Update Site 1* version of Anypoint Studio or newer, exporting your project already produces a zip file that has the necessary structure. To expose your Mule Project on the Exchange:

* Select *File* > *Export*
* Then pick Mule > *Anypoint Studio Project to Mule Deployable Archive (includes Studio metadata)*
+
image:export.png[export]
+
* Follow the remaining steps in the wizard to provide a name and location for your exported file
* Host resulting .zip file in an HTTP server
* Submit an example or template to your Exchange, add a version and reference this HTTP address in it

== Submitting Connectors to a Private Exchange

If you produce your own custom connectors with DevKit, you can share them among your organization as well through your Exchange.

You can add multiple connector versions to work with different Mule runtime versions, just click the *Add Versions* button and then *Done* after filling in the version information. For each version you add, you have three options for linking to the connector itself:

* *Install*: Reference a *Feature ID*, which points to an update site where the connector can be downloaded from. Currently, other people can't download a privately published connector directly, as they can with public connectors. This feature will be provided in the future. For the time being, you must link to an address where they can download the connector.
* *Link*: Link to an external address, where perhaps they may be able to download the file and import it into Studio manually.
* *No link*: Don't provide a link; your Exchange entry only contains a description.

You can also link to specific documentation for each version of your connector, referenced separately on each version.

=== Installing a Connector in Anypoint Studio

. Under the `Help` menu in *Anypoint Studio*, click `Install New Software`. 
. Click *Add* next to the *Work with* field, then enter the following values:
.. *Name:* A name to display your connector in the palette.
.. *Location*: the filepath of your connector's *update-site.zip* file (inside the `target` folder) prepended with `file:/`.
+
image:import2.png[import2]
+
. In the checkboxes below the filter field (see image below), select your connector. Click to expand the folders to select individual items, and click *Next*.
+
image:import3.png[import3]
+
. Review the details of the item you selected, then click *Next*.
. Click to accept terms and conditions of the product, then click *Finish*.
. Click *Restart Now* to complete the installation.  
. After Studio restarts, search for your new Hello connector in the palette.
+
image:using1.png[using1]


=== RAML APIs

If you have a link:http://raml.org[RAML] definition file that describes your API, or if you have an API Portal to document it interactively, you can expose these to others in your organization using Exchange. If someone in your organization wants to connect to your API via the link:/mule-user-guide/v/3.7/http-request-connector[HTTP Request Connector] in Anypoint Studio, referencing the API's RAML file exposes the API's metadata, making integration a lot easier. See the <<Referencing a RAML File>> section above for more information. If your API is registered in the Anypoint Platform for APIs, you can also link to its portal from the Exchange, which provides very versatile interactive tools for easing your internal user's engagement with it.

To add multiple API versions to your Exchange entry, just click the *Add Versions* button, and then *Done* after filling in the version information. For each version you add, also include:

* A link to the API's *RAML* definition file.
* A link to the API's *Portal* on the Anypoint Platform for APIs.

=== WSDL APIs

If you have a WSDL definition file that describes your API, you can expose it to others in your organization using Exchange. If someone in your organization wants to connect to your API via the link:/mule-user-guide/v/3.7/web-service-consumer[Web Service Consumer] in Anypoint Studio, referencing the API's WSDL file exposes the API's metadata, making integration a lot easier. See the <<Referencing a WSDL File>> section above for more information.

When integrating through a Web Service Consumer connector, you can choose to provide a specific WSDL location, or you can click the
*Search WSDL in Exchange* link to see a list of the published WSDLs in Anypoint Exchange.

To add multiple API versions to your Exchange entry, just click the *Add Versions* button, and then *Done* after filling in the version information. For each version you add, also include a link to the API's *WSDL* definition file.

== Business Groups in Private Exchanges

The May 2016 release of Anypoint Exchange and newer supports business groups, and provides new filters for *Show content from* and *Scope* that let you decide what Exchange artifacts users can view depending on their organizational role.

To view business groups:

. Log into link:https://anypoint.mulesoft.com/#/signin[Anypoint Platform].
. Click the organization's name in the top taskbar to view the current business groups:
+
image:exchange-view-business-groups.png[exchange-view-business-groups]

In the Business Groups feature in Exchange, published content is shared through the Business Groups depending on which roles you assign the users in your organization.

The use cases for business groups are:

* Ability of a Central IT organization, such as the root organization to create artifacts and make them available to all Lines of Businesses (LOBs), which are subordinate organizations.
* Ability of a Central IT organization to locate artifacts published in a sub org and make them available to the rest of the business.
* Ability of an LOB to publish artifacts for internal to that sub org's consumption.

image:exchange-bgroups.png[exchange business groups]

A user only belongs to a sub org because an administrator assigns to a user the sub org. If a user is invited to BG1.1 without any permission s/he won’t be able to see any artifacts from that sub org.

Any user that belongs to an organization to see the artifacts of that org (top level org). So if I’m a member of “org 1” and I don’t have any permissions, I can see published artifacts in org 1.

In the Nav bar drop down, this user is going to see only the Org1 option.

If a user is invited to BG 1.1 without an Exchange role assigned, but with other role assigned, like  API creator -  View of the artifacts, the user sees 1.1.

=== Viewer’s - View of the Artifacts

If a user is invited to BG 1.1 with the Viewer role, the user sees published artifacts belonging to Org1 and BG 1.1.
In the Nav bar this user only sees the BG 1.1 option.

=== Contributor’s View of the Artifacts

If a contributor  belongs to BG 1.1, this person sees artifacts belonging to BG 1.1, BG 1, and Org 1.

Now suppose this user belongs to both BG 1.1 and BG 2. The user now sees artifacts belonging to BG 2 and Org 1.

Therefore, a contributor sees artifacts going up the hierarchy.

Also note that a contributor can only contribute an artifact to the business group to which they belong.

In Exchange, *Show content from* only shows the business groups based on this logic. A user always has access to MuleSoft.

=== Approver’s view of the Artifacts

Assume that the user has the approver privileges and belongs to BG1. The approver can only approve artifacts that belong to the business group in which the approver belongs or the business groups that are the children of that business group. So in this case, the approver only sees items from BG 1, BG 1.1, and BG 1.2.

Note that the approver sees both published and waiting to be published artifacts. The approver can publish a waiting to be published artifact to any org at his disposal. The approver can also re-publish an already published artifact to a different organization.

Note that since the approver also has contributor privileges, the approver  sees items from BG1 and Org 1. But the approver cannot approve anything from Org 1.

=== Exchange Filters

Anypoint Exchange May 2016 and newer supports new filters to search content:

* The `Show content from` filter
* `Scope` filter - Depends on the role that a user has in the organization that is selected in the navigation bar.

The content that is shown in the list by default depends in the organization or business group that is selected in the navigation bar.

== See Also

* Learn the different ways you can link:/mule-fundamentals/v/3.7/deploying-mule-applications[Deploy] your app.
* Read a link:http://blogs.mulesoft.org/anypoint-templates-database-intro/[Blog Post] and link:http://blogs.mulesoft.org/connected-company-part-1-salesforce-integration-templates/[Another One] about templates that center around Salesforce.
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
